fixing LESS. Adding transition and overflow:hidden

--- a/less/modules/js.carousel.less
+++ b/less/modules/js.carousel.less
@@ -3,6 +3,7 @@
   width: 100%;
   position: relative;
   padding-bottom: 1em;
+  overflow: hidden;
   margin-top: 10em;
   margin-left: auto;
   margin-right: auto;
@@ -14,6 +15,8 @@
     position: relative;
     top: 0;
     left: 0;
+
+    #ink > #effects > .transition(left, top; 0.5s; ease);
 
     .slide {
       margin: 0 auto;
